Closed
Bug 1730541
Opened 3 years ago
Closed 3 years ago
Perma [tier 2] SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/accessible/base/nsCoreUtils.cpp:363:29 in nsCoreUtils::IsContentDocument(mozilla::dom::Document*)
Categories
(Core :: Disability Access APIs, defect, P5)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
94 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: smaug)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=351393670&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Vx6McpviTEugBp218nGOEQ/runs/0/artifacts/public/logs/live_backing.log
[task 2021-09-13T15:52:33.705Z] 15:52:33 INFO - TEST-START | accessible/tests/browser/events/browser_test_focus_browserui.js
[task 2021-09-13T15:52:34.187Z] 15:52:34 INFO - GECKO(1555) | must wait for focus in content
[task 2021-09-13T15:52:35.090Z] 15:52:35 INFO - GECKO(1555) | AddressSanitizer:DEADLYSIGNAL
[task 2021-09-13T15:52:35.093Z] 15:52:35 INFO - GECKO(1555) | =================================================================
[task 2021-09-13T15:52:35.093Z] 15:52:35 ERROR - GECKO(1555) | ==1751==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7fba95a56a5b bp 0x7ffdfe8af630 sp 0x7ffdfe8af610 T0)
[task 2021-09-13T15:52:35.093Z] 15:52:35 INFO - GECKO(1555) | ==1751==The signal is caused by a READ memory access.
[task 2021-09-13T15:52:35.093Z] 15:52:35 INFO - GECKO(1555) | ==1751==Hint: address points to the zero page.
[task 2021-09-13T15:52:35.921Z] 15:52:35 INFO - GECKO(1555) | #0 0x7fba95a56a5b in nsCoreUtils::IsContentDocument(mozilla::dom::Document*) /builds/worker/checkouts/gecko/accessible/base/nsCoreUtils.cpp:363:29
[task 2021-09-13T15:52:35.929Z] 15:52:35 INFO - GECKO(1555) | #1 0x7fba95a13e51 in mozilla::a11y::DocManager::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /builds/worker/checkouts/gecko/accessible/base/DocManager.cpp:249:35
[task 2021-09-13T15:52:35.934Z] 15:52:35 INFO - GECKO(1555) | #2 0x7fba8d1b3ae9 in nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:1376:3
[task 2021-09-13T15:52:35.934Z] 15:52:35 INFO - GECKO(1555) | #3 0x7fba8d1b2864 in nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:974:14
[task 2021-09-13T15:52:35.934Z] 15:52:35 INFO - GECKO(1555) | #4 0x7fba8d1af1c3 in nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:793:9
[task 2021-09-13T15:52:35.934Z] 15:52:35 INFO - GECKO(1555) | #5 0x7fba8d1b1519 in nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:676:5
[task 2021-09-13T15:52:35.981Z] 15:52:35 INFO - GECKO(1555) | #6 0x7fba958dca2b in nsDocShell::OnStopRequest(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:13494:23
[task 2021-09-13T15:52:35.996Z] 15:52:35 INFO - GECKO(1555) | #7 0x7fba8b7d48be in mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/netwerk/base/nsLoadGroup.cpp:614:22
[task 2021-09-13T15:52:35.996Z] 15:52:35 INFO - GECKO(1555) | #8 0x7fba8b7d7083 in mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) /builds/worker/checkouts/gecko/netwerk/base/nsLoadGroup.cpp:518:10
[task 2021-09-13T15:52:36.014Z] 15:52:36 INFO - GECKO(1555) | #9 0x7fba8c31b377 in mozilla::net::DocumentChannel::DisconnectChildListeners(nsresult const&, nsresult const&) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentChannel.cpp:134:17
[task 2021-09-13T15:52:36.014Z] 15:52:36 INFO - GECKO(1555) | #10 0x7fba8c320cfa in mozilla::net::DocumentChannelChild::RecvDisconnectChildListeners(nsresult const&, nsresult const&, bool) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentChannelChild.cpp
[task 2021-09-13T15:52:36.018Z] 15:52:36 INFO - GECKO(1555) | #11 0x7fba8c925c7c in mozilla::net::PDocumentChannelChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PDocumentChannelChild.cpp:211:64
[task 2021-09-13T15:52:36.084Z] 15:52:36 INFO - GECKO(1555) | #12 0x7fba8c7c7990 in mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PContentChild.cpp:8320:32
[task 2021-09-13T15:52:36.102Z] 15:52:36 INFO - GECKO(1555) | #13 0x7fba8c61115c in mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:2039:25
[task 2021-09-13T15:52:36.102Z] 15:52:36 INFO - GECKO(1555) | #14 0x7fba8c60ebbc in mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1964:9
[task 2021-09-13T15:52:36.102Z] 15:52:36 INFO - GECKO(1555) | #15 0x7fba8c60febb in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1823:3
[task 2021-09-13T15:52:36.104Z] 15:52:36 INFO - GECKO(1555) | #16 0x7fba8c610578 in mozilla::ipc::MessageChannel::MessageTask::Run() /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1851:14
[task 2021-09-13T15:52:36.129Z] 15:52:36 INFO - GECKO(1555) | #17 0x7fba8b505842 in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:478:16
[task 2021-09-13T15:52:36.129Z] 15:52:36 INFO - GECKO(1555) | #18 0x7fba8b4cf433 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:781:26
[task 2021-09-13T15:52:36.130Z] 15:52:36 INFO - GECKO(1555) | #19 0x7fba8b4ccb78 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:617:15
[task 2021-09-13T15:52:36.130Z] 15:52:36 INFO - GECKO(1555) | #20 0x7fba8b4cd2a0 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:401:36
[task 2021-09-13T15:52:36.131Z] 15:52:36 INFO - GECKO(1555) | #21 0x7fba8b50f184 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:129:37
[task 2021-09-13T15:52:36.131Z] 15:52:36 INFO - GECKO(1555) | #22 0x7fba8b50f184 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_1>::Run() /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.h:531:5
[task 2021-09-13T15:52:36.132Z] 15:52:36 INFO - GECKO(1555) | #23 0x7fba8b4ecb27 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1148:16
[task 2021-09-13T15:52:36.134Z] 15:52:36 INFO - GECKO(1555) | #24 0x7fba8b4f7a7c in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:466:10
[task 2021-09-13T15:52:36.136Z] 15:52:36 INFO - GECKO(1555) | #25 0x7fba8c617dbf in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:107:5
[task 2021-09-13T15:52:36.137Z] 15:52:36 INFO - GECKO(1555) | #26 0x7fba8c525651 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:331:10
[task 2021-09-13T15:52:36.137Z] 15:52:36 INFO - GECKO(1555) | #27 0x7fba8c525651 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324:3
[task 2021-09-13T15:52:36.138Z] 15:52:36 INFO - GECKO(1555) | #28 0x7fba8c525651 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306:3
[task 2021-09-13T15:52:36.143Z] 15:52:36 INFO - GECKO(1555) | #29 0x7fba92490297 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137:27
[task 2021-09-13T15:52:36.148Z] 15:52:36 INFO - GECKO(1555) | #30 0x7fba9632943f in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:917:20
[task 2021-09-13T15:52:36.148Z] 15:52:36 INFO - GECKO(1555) | #31 0x7fba8c525651 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:331:10
[task 2021-09-13T15:52:36.148Z] 15:52:36 INFO - GECKO(1555) | #32 0x7fba8c525651 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:324:3
[task 2021-09-13T15:52:36.149Z] 15:52:36 INFO - GECKO(1555) | #33 0x7fba8c525651 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:306:3
[task 2021-09-13T15:52:36.149Z] 15:52:36 INFO - GECKO(1555) | #34 0x7fba96328e15 in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:749:34
[task 2021-09-13T15:52:36.152Z] 15:52:36 INFO - GECKO(1555) | #35 0x5575f48cd0ed in content_process_main(mozilla::Bootstrap*, int, char**) /builds/worker/checkouts/gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
[task 2021-09-13T15:52:36.153Z] 15:52:36 INFO - GECKO(1555) | #36 0x5575f48cd511 in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:327:18
[task 2021-09-13T15:52:36.227Z] 15:52:36 INFO - GECKO(1555) | #37 0x7fbaaf363b96 in __libc_start_main /tmp/glibc/csu/../csu/libc-start.c:310
[task 2021-09-13T15:52:36.228Z] 15:52:36 INFO - GECKO(1555) | #38 0x5575f481e7ac in _start (/builds/worker/workspace/build/application/firefox/firefox+0x577ac)
[task 2021-09-13T15:52:36.235Z] 15:52:36 INFO - GECKO(1555) | AddressSanitizer can not provide additional info.
[task 2021-09-13T15:52:36.235Z] 15:52:36 INFO - GECKO(1555) | SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/accessible/base/nsCoreUtils.cpp:363:29 in nsCoreUtils::IsContentDocument(mozilla::dom::Document*)
[task 2021-09-13T15:52:36.235Z] 15:52:36 INFO - GECKO(1555) | ==1751==ABORTING
[task 2021-09-13T15:54:03.862Z] 15:54:03 INFO - TEST-INFO | started process screentopng
[task 2021-09-13T15:54:04.250Z] 15:54:04 INFO - TEST-INFO | screentopng: exit 0
[task 2021-09-13T15:54:04.253Z] 15:54:04 INFO - Buffered messages logged at 15:52:33
[task 2021-09-13T15:54:04.254Z] 15:54:04 INFO - Entering test bound
[task 2021-09-13T15:54:04.256Z] 15:54:04 INFO - Buffered messages logged at 15:52:34
[task 2021-09-13T15:54:04.259Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Recieved document load complete event -
[task 2021-09-13T15:54:04.260Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Actually remote browser -
[task 2021-09-13T15:54:04.261Z] 15:54:04 INFO - Console message: [JavaScript Warning: "Key event not available on some keyboard layouts: key=“r” modifiers=“accel,alt” id=“key_toggleReaderMode”" {file: "chrome://mochikit/content/tests/SimpleTest/EventUtils.js" line: 1361}]
[task 2021-09-13T15:54:04.262Z] 15:54:04 INFO - Console message: [JavaScript Warning: "Key event not available on some keyboard layouts: key=“r” modifiers=“accel,alt” id=“key_quickRestart”" {file: "chrome://mochikit/content/tests/SimpleTest/EventUtils.js" line: 1361}]
[task 2021-09-13T15:54:04.263Z] 15:54:04 INFO - Console message: [JavaScript Warning: "Key event not available on some keyboard layouts: key=“i” modifiers=“accel,alt,shift” id=“key_browserToolbox”" {file: "chrome://mochikit/content/tests/SimpleTest/EventUtils.js" line: 1361}]
[task 2021-09-13T15:54:04.265Z] 15:54:04 INFO - Buffered messages logged at 15:52:35
[task 2021-09-13T15:54:04.266Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Recieved focus event -
[task 2021-09-13T15:54:04.267Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | wrong state bits for [DOM node id: input, role: entry, address: [xpconnect wrapped nsIAccessible]]! -
[task 2021-09-13T15:54:04.271Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Focussed [DOM node id: input, role: entry, address: [xpconnect wrapped nsIAccessible]] must be focusable! -
[task 2021-09-13T15:54:04.272Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Singleline [DOM node id: input, role: entry, address: [xpconnect wrapped nsIAccessible]] cannot be multiline! -
[task 2021-09-13T15:54:04.273Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Recieved focus event -
[task 2021-09-13T15:54:04.274Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | wrong state bits for [DOM node id: buttonInputDoc, role: document, name: 'Accessibility Test', address: [xpconnect wrapped (nsIAccessible, nsIAccessibleDocument)]]! -
[task 2021-09-13T15:54:04.276Z] 15:54:04 INFO - TEST-PASS | accessible/tests/browser/events/browser_test_focus_browserui.js | Focussed [DOM node id: buttonInputDoc, role: document, name: 'Accessibility Test', address: [xpconnect wrapped (nsIAccessible, nsIAccessibleDocument)]] must be focusable! -
[task 2021-09-13T15:54:04.276Z] 15:54:04 INFO - Buffered messages logged at 15:52:36
[task 2021-09-13T15:54:04.278Z] 15:54:04 INFO - Console message: [JavaScript Error: "remote browser crashed while on data:text/html;charset=utf-8,%3Chtml%3E%0A%20%20%20%20%20%20%3Chead%3E%0A%20%20%20%20%20%20%20%20%3Cmeta%20charset%3D%22utf-8%22%2F%3E%0A%20%20%20%20%20%20%20%20%3Ctitle%3EAccessibility%20Test%3C%2Ftitle%3E%0A%20%20%20%20%20%20%3C%2Fhead%3E%0A%20%20%20%20%20%20%3Cbody%20id%3D%22buttonInputDoc%22%3E%3Cinput%20id%3D%22input%22%20type%3D%22button%22%20value%3D%22button%22%3E%3C%2Fbody%3E%0A%20%20%20%20%3C%2Fhtml%3E
[task 2021-09-13T15:54:04.278Z] 15:54:04 INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 10}]
[task 2021-09-13T15:54:04.279Z] 15:54:04 INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:10:10
[task 2021-09-13T15:54:04.280Z] 15:54:04 INFO -
[task 2021-09-13T15:54:04.282Z] 15:54:04 INFO - Buffered messages finished
[task 2021-09-13T15:54:04.284Z] 15:54:04 INFO - TEST-UNEXPECTED-FAIL | accessible/tests/browser/events/browser_test_focus_browserui.js | Test timed out -
[task 2021-09-13T15:54:04.286Z] 15:54:04 INFO - GECKO(1555) | MEMORY STAT | vsize 20975169MB | residentFast 1131MB
[task 2021-09-13T15:54:04.287Z] 15:54:04 INFO - TEST-OK | accessible/tests/browser/events/browser_test_focus_browserui.js | took 90337ms
[task 2021-09-13T15:54:04.288Z] 15:54:04 INFO - checking window state
[task 2021-09-13T15:54:04.295Z] 15:54:04 INFO - TEST-START | accessible/tests/browser/events/browser_test_focus_dialog.js
Updated•3 years ago
|
Regressed by: 1729458
Summary: Intermittent [tier 2] SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/accessible/base/nsCoreUtils.cpp:363:29 in nsCoreUtils::IsContentDocument(mozilla::dom::Document*) → Perma [tier 2] SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/accessible/base/nsCoreUtils.cpp:363:29 in nsCoreUtils::IsContentDocument(mozilla::dom::Document*)
Updated•3 years ago
|
Has Regression Range: --- → yes
Comment 1•3 years ago
|
||
nsCoreUtils::IsContentDocument
is probably crashing on a null docShellTreeItem. It should handle the null case instead of using NS_ASSERTION
.
Updated•3 years ago
|
Assignee: nika → agakhokidze
Comment 2•3 years ago
•
|
||
Fixed by backing out Bug 1729458
Backout Link
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Comment 3•3 years ago
|
||
We still want to make this nsCoreUtils::IsContentDocument
fix, either in this bug or in Nika's patches for bug 1729458 when she relands them.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 4•3 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c18f5949c5c6
remove nsCoreUtils::IsContentDocument, r=nika
Updated•3 years ago
|
Crash Signature: [@ nsCoreUtils::IsContentDocument]
Updated•3 years ago
|
Keywords: regression
Comment 7•3 years ago
|
||
bugherder |
Status: REOPENED → RESOLVED
Closed: 3 years ago → 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Updated•3 years ago
|
status-firefox92:
--- → unaffected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Comment hidden (Intermittent Failures Robot) |
Updated•3 years ago
|
Assignee: agakhokidze → nobody
Updated•3 years ago
|
Assignee: nobody → bugs
You need to log in
before you can comment on or make changes to this bug.
Description
•