Bug 1730541, remove nsCoreUtils::IsContentDocument, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D125462